# chasm-cli

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  demo.tape  demo_cmd.tape  deny.toml  openapi.yaml
.github/workflows/: release.yml
docs/: LAUNCH_THREAD.md
examples/: basic_usage.rs  cloud_providers.rs  history_management.rs  local_providers.rs  session_operations.rs  storage_operations.rs
src/: browser.rs  cli.rs  cloud_sync.rs  colors.rs  database.rs  encryption.rs  error.rs  lib.rs  main.rs  models.rs  scaling.rs  storage.rs  telemetry.rs  workspace.rs
src/agency/: agent.rs  archival.rs  error.rs  executor.rs  memory.rs  mod.rs  modality.rs  models.rs  orchestrator.rs  proactive.rs  remote.rs  runtime.rs  search_refinement.rs  session.rs  tools.rs
src/analytics/: dashboard.rs  mod.rs  reports.rs
src/api/: analytics.rs  audit.rs  auth.rs  backup.rs  branching.rs  caching.rs  device_sync.rs  docs.rs  graphql.rs  handlers.rs  handlers_simple.rs  handlers_swe.rs  mod.rs  recording.rs  retention.rs  routes.rs  sdk.rs  sso.rs  state.rs  sync.rs  versioning.rs  webhooks.rs  websocket.rs
src/automation/: mod.rs
src/commands/: agency.rs  detect.rs  export_import.rs  git.rs  harvest.rs  history.rs  migration.rs  mod.rs  providers.rs  recover.rs  register.rs  run.rs  telemetry.rs  workspace_cmds.rs
src/enterprise/: compliance.rs  mod.rs  multitenancy.rs  whitelabel.rs
src/integrations/: browser.rs  communication.rs  hooks.rs  mod.rs  productivity.rs  registry.rs  smart_home.rs  system.rs
src/intelligence/: mod.rs
src/mcp/: db.rs  main.rs  mod.rs  resources.rs  server.rs  tools.rs  types.rs
src/plugins/: mod.rs
src/providers/: config.rs  cursor.rs  discovery.rs  gpt4all.rs  jan.rs  llamafile.rs  lmstudio.rs  localai.rs  mod.rs  ollama.rs  openai_compat.rs  session_format.rs  textgen_webui.rs  vllm.rs
src/providers/cloud/: anthropic.rs  chatgpt.rs  common.rs  deepseek.rs  gemini.rs  m365copilot.rs  mod.rs  perplexity.rs
src/routing/: continuation.rs  mod.rs  model_router.rs  recommendations.rs
src/sync/: bidirectional.rs  mod.rs
src/teams/: activity.rs  mod.rs  rbac.rs  search.rs  workspace.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
tests/: cloud_provider_tests.rs  detect_tests.rs  error_tests.rs  harvest_tests.rs  integration_tests.rs  merge_tests.rs  models_tests.rs  provider_tests.rs  session_format_tests.rs  storage_tests.rs  workspace_tests.rs
